Add ChatClient functionalities: - Saving Channels as Json - Reading Channels from Json - Saving and reading Messages to/From Json - Adding Channel Switching basics